syntax = "proto3";

import "google/protobuf/empty.proto";

package common.grpc.common;

option java_multiple_files = true;

service CustomerService {

  rpc register(CustomerRegistrationRequest) returns (google.protobuf.Empty);

}

message CustomerRegistrationRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string country = 4;
  string address = 5;
}